manifests/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app
spec:
  replicas: 3
  selector:
    matchLabels:
      component: api
  template:
    metadata:
      labels:
        component: api
    spec:
      securityContext:
        runAsNonRoot: true
        runAsUser: 1000

      automountServiceAccountToken: false

      tolerations:
        - key: "ssr01"
          operator: "Equal"
          value: "true"
          effect: "NoSchedule"

      containers:
        - name: main
          image: localhost:5000/sensorenregister/api:latest
          imagePullPolicy: IfNotPresent
          securityContext:
            privileged: false
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
          resources:
            requests:
              cpu: 1
              memory: "64Mi"
            limits:
              cpu: 1
              memory: "64Mi"
          volumeMounts:
            - mountPath: /config
              name: config
      volumes:
        - name: config
          configMap:
            name: app-config
