manifests/base/networkpolicy.yaml
apiVersion: projectcalico.org/v3
kind: NetworkPolicy
metadata:
  name: allow-nginx
spec:
  selector: app == 'sensorenregister'
  types:
    - Ingress
    - Egress
  ingress:
    - action: Allow
